--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,13 @@
   text-align: center;
 }
 
+.app {
+  background-color: black;
+  color: white;
+  min-height: 100vh;
+}
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
